syntax = "proto3";

package auth;

option go_package = "./services/user_service/service/pb";

import "google/protobuf/timestamp.proto";

message GetMyProfileReq {
    int64 id = 1;
}

message GetMyProfileRes {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    google.protobuf.Timestamp createTime = 5;
    bool isActive = 6;
    string countryCode = 7;
    string mobile = 8;
    string about = 9;
    string insagram = 10;
    string twitter = 11;
    bool emailVerified = 12;
    
}

service UserService {
    rpc GetMyProfile(GetMyProfileReq) returns (GetMyProfileRes) {}
}